[package]
name = "imgpuller-metric-export"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-service = "2.0.3"
actix-web = "4.11.0"
anyhow = "1.0.100"
bollard = "0.19.3"
bytes = "1.10.1"
clap = { version = "4.5.49", features = ["derive"] }
env_logger = "0.11.8"
futures-util = "0.3.31"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "chrono", "macros"] }
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
